--- a/react/package.json
+++ b/react/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,9 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-axios-client": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -23,6 +24,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.3.2"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
