--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.11.1
 blinker==1.6.2
 click==8.1.3
 Flask==2.3.2
+Flask-Cors==3.0.10
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
@@ -10,6 +11,7 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 python-dotenv==1.0.0
+six==1.16.0
 SQLAlchemy==2.0.13
 typing_extensions==4.5.0
 Werkzeug==2.3.4
